--- a/client/app/styles/base.css
+++ b/client/app/styles/base.css
@@ -9,14 +9,23 @@ body {
 
 /****** ------登录界面----start---- ********/
 .login-page {
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    background-color: rgba(7, 17, 27, 0.5);
+    padding-top: 40%;
+}
+
+.bg {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
-    bottom: 0;
-    background: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%) no-repeat;
-    background-size: 100% 100%;
-    padding-top: 20%;
+    width: 100%;
+    height: 100%;
+    filter: blur(5px);
+    z-index: -1;
 }
 
 .logo {
@@ -29,6 +38,10 @@ body {
 }
 
 @media screen and (min-width: 768px) {
+    .login-page {
+        padding-top: 50%;
+    }
+
     .login-panel {
         width: 70%;
     }
@@ -36,12 +49,20 @@ body {
 }
 
 @media screen and (min-width: 992px) {
+    .login-page {
+        padding-top: 20%;
+    }
+
     .login-panel {
         width: 23%;
     }
 }
 
 @media screen and (min-width: 1200px) {
+    .login-page {
+        padding-top: 20%;
+    }
+
     .login-panel {
         width: 23%;
     }
