--- a/client/app/view/login/login.html
+++ b/client/app/view/login/login.html
@@ -1,8 +1,8 @@
 <div class="login-page">
-    <div class="container-fluid">
+    <div class="container-fluid" style="position:relative;">
         <div class="login-panel">
             <div class="panel panel-info">
-                <div class="panel-heading">浦江特种气体客户端平台</div>
+                <div class="panel-heading"><i>浦江特种气体客户端平台</i></div>
                 <div class="panel-body">
                     <form class="form-horizontal col-md-offset-1 col-md-10" style="margin-top:5%;">
                         <div class="form-group">
@@ -46,5 +46,8 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="bg">
+        <img src="../images/bg_3.jpg" width="100%;" height="100%;">
     </div>
 </div>
